$Id: History,v 1.5 2000-07-18 10:45:32 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

18 jul 00: V.Ivanchenko (stand-V01-??)
- fix in G4VhEnergyLoss and G4ionIonisation in AlongStepDoIt 
  for particles with Charge^2 > 1; Reorganisation in
  GetConstrain for G4ionIonisation
     
22 jun 00: mma (stand-V01-01-05)
- stop very low energy photons in photo electric effect
- ElossMessenger moved --> G4VEnergyLoss
       
13 jun 00: mma (stand-V01-01-04)
- static pointer MinDeltaEnergy removed from destructor of
  G4VeEnergyLoss and G4VhEnergyLoss
     
07 jun 00: mma (stand-V01-01-03)
- virtual destructor for G4VEnergyLoss

24 may 00: mma (stand-V01-01-02)
- merge 'Plus' processes into standard
- minCut=10 KeV for brems
- corrections in ionisation (Laszlo)

       
27 apr 00 mma  (em-V01-01-01)
- G4endl (dec/iso)      
     
26 apr 00 mma  (em-V01-01-00)
- all EnergyLoss classes renamed G4V... 
  Most classes in standard and muons affected.
- G4Muls moved in utils
- bugs fixe in MuPairProduction  
- cowork with geant4-01-01-ref-02
     
02 mar 00 mma  (em-V01-00-00)
- new G4VEnergyLoss class and related structure
- cowork with geant4-01-00-ref-06
     
10 nov 99 mma  (em-V00-01-03)